_build/html/reports/Untitled.err.log
Traceback (most recent call last):
  File "C:\Users\AL\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 58, in single_nb_execution
    executenb(
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "C:\Users\AL\anaconda3\lib\asyncio\base_events.py", line 647, in run_until_complete
    return future.result()
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "C:\Users\AL\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
#import sys
#sys.stdin = open('to_replace.txt', 'r')

#i = sys.stdin.read()
f = open('to_replace.txt', 'r', encoding='utf-8')

i = ''.join(line for line in f)

replacements = {
    ' /∈ ' : ' \\notin ',
    '∈' : '\in',
    '×' : '\\times',
    ' 6 = ' : ' \\ne ',
    '⊆' : '\subseteq',
    '{' : '\{ ',
    '}' : ' \}',
    '∅' : '\\varnothing',
    '∩' : '\cap',
    '∪' : '\cup',
    'ˆ' : '\hat ',
    ' 6 % ' : ' \\not\succsim ',
    ' 6 ' : ' \leqslant ',
    '⊂' : '\subset',
    '%' : '\succsim',
    '' : '\succ',
    'R2\n+' : '\mathbb{R}^2_{+}',
    'RL\n+' : '\mathbb{R}^L_{+}',
    'Rn' : '\mathbb{R}^n',
    '√' : '\sqrt{',
    '−→' : '\\rightarrow',
    '∞' : '\infty',
    'x1' : 'x_1',
    'x2' : 'x_2',
    'xn' : 'x_n',
    '◦' : '\circ',
    'x0' : 'x_0',
    '>̂' : '> \hat',
    '⇐⇒' : '\iff',
    ' e ' : ' \epsilon ',
    'n\inN':'n \in \mathbb{N}',
    'θ' : '\\theta'.
    'σ' : '\sigma'
}

set_replacements = {
    ' N,' : ' \mathbb{N},',
    ' N ' : ' \mathbb{N} ',
    ' Z,' : ' \mathbb{Z},',
    ' Z ' : ' \mathbb{Z} ',
    ' Q,' : ' \mathbb{Q},',
    ' Q ' : ' \mathbb{Q} ',
    ' R,' : ' \mathbb{R},',
    ' R ' : ' \mathbb{R} ',
    ' C,' : ' \mathbb{C},',
    ' C ' : ' \mathbb{C} ',
    ' C.' : ' \mathbb{C}.',
}

o = i
for k in replacements.keys():
    o = o.replace(k, replacements[k])

    
sr = True   # Do set notation replacements?
if sr:
    for k in set_replacements.keys():
        o = o.replace(k, set_replacements[k])
    

print('')

print(o)
------------------

[1;36m  File [1;32m"C:\Users\AL\AppData\Local\Temp\ipykernel_13552\417116125.py"[1;36m, line [1;32m42[0m
[1;33m    'σ' : '\sigma'[0m
[1;37m    ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (417116125.py, line 42)

